# ilink-hub

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.cargo/: mutants.toml
.flowx/: config.json  dashboard.html
.flowx/flows/: todo-drain.js  todo-parser.js
.flowx/reports/: force-dev-signals.js
.github/workflows/: ci.yml  docker.yml  docs.yml  mutation-testing.yml  publish-npm.yml  release-mac-fast.yml  release.yml
.specify/: .init-info.json
.specify/feat-message-queue-trait/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/feat-message-queue-trait/checklists/: requirements.md
.specify/feat-message-queue-trait/contracts/: trait_definition.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.workbuddy/memory/: 2026-07-06.md  2026-07-16.md
demo/: demo-full.tape  demo.tape
deploy/: docker-compose.example.yml  ilink-relay.service  nginx-ilinkhub-relay.conf
desktop/: README.md
desktop/ilink-hub-desktop/: README.md  index.html  package-lock.json  package.json
desktop/ilink-hub-desktop/src/: main.ts  styles.css
desktop/ilink-hub-desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/ilink-hub-desktop/src-tauri/src/: bridge_profiles.rs  hub_commands.rs  lib.rs  listen_addr.rs  main.rs  test_support.rs
docs/: TODO.md  architecture-audit-2026-06-14.md  architecture-review.md  bridge-config.md  desktop-tauri-roadmap.md  desktop-ux-todo.md  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/adr/: 001-message-queue-persistence.md  002-in-memory-state-inventory.md  003-sqlite-single-connection.md  004-fire-and-forget-persist.md
docs/bridge/: README.md  USAGE.md  develop-nodejs.md  develop-python.md  env-interpolation-spec.md  index.md  profile-spec.md  quick-try.md  remote-hub.md  sdk-examples.md
docs/bridge/examples/: claude-code-session.profiles.yaml  claude-code.example.yaml  claude-code.profiles.example.yaml  codex.example.yaml  cursor-agent.example.yaml  echo.example.yaml  multi-profile.example.yaml  sdk-profile.example.yaml
docs/deployment/: docker.md  linux-systemd.md  security.md
docs/guide/: ai-install.md  claude-code.md  client-config.md  comparison.md  faq.md  getting-started.md  installation.md  login.md  pairing-tunnel.md  register-client.md  sdk-compatibility.md  what-is-ilink-hub.md
docs/knowledge/: index.md  log.md
docs/knowledge/api/: commands.md  configuration.md  index.md
docs/knowledge/bridges/: claude-code.md  cursor.md  email-bridge.md  index.md  overview.md  profile-protocol.md  recursive.md
docs/knowledge/dev-workflow/: common-commands.md  force-dev.md  index.md
docs/knowledge/ops/: deployment-hardening.md  index.md  release-and-deploy.md
docs/knowledge/project/: conventions.md  index.md  overview.md  quality-gates.md
docs/mutation-testing/: README.md  baseline.md
docs/proposals/: bridge-as-multi-im-runtime.md  multi-agent-group-chat.md  project-aware-backends.md
docs/reference/: api.md  commands.md  configuration.md  metrics.md
docs/reviews/: 2026-07-20-bridge-transport-abstraction.md
examples/: smoke_agentproc.rs
examples/claude-code-nodejs/: README.md  handler.js  package-lock.json  package.json  profiles.yaml
examples/codebuddy-code/: profiles.yaml
examples/codex-shell/: README.md  handler.sh  profiles.yaml
examples/cursor-python/: README.md  handler.py  profiles-builtin.yaml  profiles.yaml  requirements.txt
examples/email-bridge/: echo-profile.js  handler.js  package.json
examples/wechatbot-echo/: Cargo.toml  README.md
examples/wechatbot-echo/src/: main.rs
journal/: 2026-06-12.md  2026-06-17.md  2026-06-26.md  2026-07-04.md  2026-07-09.md  2026-07-10.md
migrations/: 0000_schema_version.sql  0001_initial_schema.sql  0002_backend_sessions.sql  0003_context_token_real_ctx_index.sql  0004_context_token_map_created_at.sql  0005_messages.sql  0006_normalize_peer_user_id.sql  0007_peer_user_id_unique_index.sql  0008_vtoken_and_bot_token_hash.sql  0009_messages_lookup_index.sql  0010_client_persona.sql  0011_a2a_depth.sql  0012_client_description.sql  0013_messages_ilink_msg_id.sql  0014_backend_session_usage.sql
scripts/: check.sh  deploy-local-brew.sh  deploy-local-mac.sh  deploy-relay.sh  homebrew-ilink-hub-shas.sh  ilink-claude-bridge.sh  install-hooks.sh  linkhub-pair-mac.sh
scripts/hooks/: pre-commit
sdk/email-bridge/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  email-acl.example.yaml  email-profiles.example.yaml  package.json
sdk/email-bridge/docs/: ARCHITECTURE.md  sender-acl-design.md
sdk/email-bridge/profiles/: _stream_json.js  agy.js  claude-code.js  codebuddy.js  codex.js  cursor.js  echo.js
sdk/email-bridge/src/: acl-config.js  admin-handler.js  agently-mail.js  denied-log.js  (+5 more)
sdk/node/: README.md  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/ilink_bridge/: __init__.py
sdk/python/tests/: test_sdk.py
src/: error.rs  lib.rs  main.rs  metrics.rs  paths.rs
src/bridge/: approval.rs  config.rs  connection.rs  dispatcher.rs  executor.rs  manager.rs  mod.rs  paths.rs  probe.rs  protocol.rs  transport.rs  vtoken_env.rs  wire_assemble.rs
src/client/: mod.rs  pairing.rs
src/hub/: commands.rs  dispatch.rs  health.rs  messages.rs  mod.rs  outbound_label.rs  pairing.rs  queue.rs  quote_route.rs  registry.rs  router.rs  state.rs  tests.rs  vtoken_hash.rs
src/ilink/: login.rs  mod.rs  types.rs  upstream.rs
src/mcp/: mod.rs  protocol.rs  router.rs  tools.rs  waiter.rs
src/relay/: auth.rs  client.rs  device.rs  mod.rs  protocol.rs  ratelimit.rs  server.rs
src/runtime/: crypto.rs  mod.rs  serve.rs
src/server/: admin.html  mod.rs  pair.html  pairing.rs  routes.rs  sse_ticket.rs
src/store/: clients.rs  context.rs  credentials.rs  messages.rs  migrations.rs  mod.rs  sessions.rs  store_tests.rs
tests/: agentproc_conformance.rs  breaking_changes.rs  cors_tests.rs  e2e_wechat_simulation.rs  hub_routing_integration.rs  metrics_auth_tests.rs  queue_trait_tests.rs
tests/fixtures/: agentproc_scenarios_0.4.json
(+308 files in other folders)
