[package]
name = "ilink-hub"
version = "0.1.6"
edition = "2021"
description = "iLink-compatible multiplexer hub for WeChat ClawBot — route one WeChat account to multiple AI agent backends"
license = "MIT"
authors = ["jeffkit <bbmyth@gmail.com>"]
repository = "https://github.com/jeffkit/ilink-hub"
homepage = "https://github.com/jeffkit/ilink-hub"
documentation = "https://docs.rs/ilink-hub"
keywords = ["wechat", "ilink", "clawbot", "ai-agent", "proxy"]
categories = ["web-programming", "network-programming"]

[[bin]]
name = "ilink-hub"
path = "src/main.rs"

[lib]
name = "ilink_hub"
path = "src/lib.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["time"] }

# HTTP client — rustls avoids OpenSSL dep, simplifies cross-compilation
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"

# Storage — sqlx supports SQLite, PostgreSQL, MySQL via DATABASE_URL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid"] }

# Config
config = "0.14"
dirs = "5"

# QR code display in terminal
qrcode = "0.14"

[dev-dependencies]
tokio-test = "0.4"
