[package]
name = "ilink-hub"
version = "0.2.9"
edition = "2021"
description = "iLink-compatible multiplexer hub for WeChat ClawBot — route one WeChat account to multiple AI agent backends"
license = "MIT"
authors = ["jeffkit <bbmyth@gmail.com>"]
repository = "https://github.com/jeffkit/ilink-hub"
homepage = "https://github.com/jeffkit/ilink-hub"
documentation = "https://docs.rs/ilink-hub"
keywords = ["wechat", "ilink", "clawbot", "ai-agent", "proxy"]
categories = ["web-programming", "network-programming"]

default-run = "ilink-hub"

[[bin]]
name = "ilink-hub"
path = "src/main.rs"

[[bin]]
name = "ilink-relay"
path = "src/bin/ilink-relay.rs"

[[bin]]
name = "ilink-hub-bridge"
path = "src/bin/ilink-hub-bridge.rs"

[lib]
name = "ilink_hub"
path = "src/lib.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["time"] }

# HTTP client — rustls avoids OpenSSL dep, simplifies cross-compilation
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Metrics — Prometheus text format encoding
prometheus = { version = "0.13", default-features = false }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
# rand_core 0.6 is kept on its own version because ed25519-dalek 2.x pins
# 0.6 and SigningKey::generate expects that major's CryptoRngCore trait.
# rand 0.9 internally brings in rand_core 0.9 (transitive only); our direct
# rand_core dep stays on 0.6 so `use rand_core::OsRng` in relay/auth.rs /
# relay/device.rs resolves to the same version ed25519-dalek sees.
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
dashmap = "6"
lru = "0.12"

# Crypto: AES-256-GCM for bot_token encryption (M2) and SHA-256 for vtoken
# hashing (M1). ring is also pulled transitively by rustls; declaring it
# here lets us import its primitives directly.
ring = "0.17"

# Storage — sqlx with SQLite (default) and PostgreSQL backends via DATABASE_URL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "chrono", "uuid", "migrate"] }

# Config
config = "0.14"
dirs = "5"

# QR code display in terminal
qrcode = { version = "0.14", features = ["svg"] }

# Pairing relay WebSocket + registration auth
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
subtle = "2.6.1"
arc-swap = "1"
serde_norway = "0.9.42"
url = "2"
percent-encoding = "2.3.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
temp-env = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
